# transd

./: Cargo.toml
crates/transd-cli/: Cargo.toml
crates/transd-cli/src/: main.rs
crates/transd-gui/: Cargo.toml
crates/transd-gui/src/: dbus.rs  main.rs
crates/transd-gui/src/app/: message.rs  mod.rs  service.rs  state.rs  update.rs
crates/transd-gui/src/app/view/: mod.rs  source.rs  target.rs  toolbar.rs
crates/transd-gui/src/infra/: mod.rs  mozhi.rs  primary_selection.rs
crates/transd-provider/mozhi/: Cargo.toml
crates/transd-provider/mozhi/src/: lib.rs
crates/transd-translate/: Cargo.toml
crates/transd-translate/src/: lib.rs
