[package]
name = "transd-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rootcause = { workspace = true }
tokio = { workspace = true }

transd-provider-mozhi = { path = "../transd-provider/mozhi" }
transd-translate = { workspace = true }
