[package]
name = "transd-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iced = { version = "0.14.0", features = ["debug", "tokio"] }
rootcause = { workspace = true }
tokio = { workspace = true }

transd-provider-mozhi = { workspace = true }
transd-translate = { workspace = true }
