[package]
name = "transd-provider-mozhi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
indexmap = { workspace = true }
reqwest = { workspace = true, features = ["query", "json"] }
rootcause = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

transd-translate = { workspace = true }
